# Chat-Crown

./: .env.example  .gitignore  A.md  IDEA.md  LICENSE  PLAN.md  README.md  config.py  main.py  migrate.py  pyproject.toml  start.py
Chat-Crown.git/: config  packed-refs
Chat-Crown.git/objects/pack/: pack-5206a6d65ba65d2b54702f30829665331582ed7e.idx  pack-5206a6d65ba65d2b54702f30829665331582ed7e.pack  pack-5206a6d65ba65d2b54702f30829665331582ed7e.rev
api/: main.py
bot/: __init__.py  bot.py
bot/handlers/: __init__.py  delete_handler.py  edit_handler.py  expense_handler.py  help.py  help_handler.py  list_handler.py  login_handler.py  magic_link_handler.py  menssage.py  message_handler.py  painel_handler.py  start.py  start_handler.py  summary_handler.py
config/: __init__.py  config.py
database/: __init__.py  connection.py
models/: __init__.py  base.py  budget.py  financial_goal.py  goal.py  login_code.py  magic_link.py  transaction.py  user.py
repositories/: __init__.py
services/: __init__.py  ai_processor.py  alert_service.py  auth_service.py  budget_service.py  database.py  expense_service.py  finance_calculator.py  goal_service.py  transactions_service.py  users_service.py
streamlit_app/: __init__.py  app.py  utils.py
streamlit_app/pages/: 0_🚀_Início_Rápido.py  1_📊_Dashboard.py  2_📅_Controle_Diário.py  3_💸_Transações.py  4_🎯_Metas_e_Orçamentos.py  4_🎯_Método_Breno.py  5_🎯_Metas.py  5_📈_Relatórios.py  6_💰_Orçamentos.py  6_📈_Relatórios.py  7_⚡_Alertas.py  7_💰_Orçamentos.py  8_⚡_Alertas.py  __init__.py
tests/: __init__.py  test_expense_handler.py
